rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filter_directive__exclude_plus_include_replaces_filter.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/filter_directive.rs
expression: result
---
orders__category | orders__total_amount | orders__amount_replace_status
-----------------+----------------------+------------------------------
books            | 600.00               | 100.00                       
clothing         | 300.00               | 50.00                        
electronics      | 500.00               | 50.00
