rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filter_directive__filter_exclude_keeps_row_set_when_member_not_grouped.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/filter_directive.rs
assertion_line: 377
expression: result
---
orders__id | orders__total_amount | orders__amount_exclude_status | orders__amount_grain_and_filter_exclude_status
-----------+----------------------+-------------------------------+-----------------------------------------------
1          | 100.00               | 100.00                        | 100.00                                        
2          | 200.00               | 200.00                        | 200.00                                        
6          | 300.00               | 300.00                        | 300.00                                        
7          | 200.00               | 200.00                        | 200.00                                        
11         | 400.00               | 400.00                        | 400.00                                        
12         | 200.00               | 200.00                        | 200.00
