rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filter_directive__filter_exclude_with_lookalike_include_keeps_query_row_set.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/filter_directive.rs
expression: result
---
orders__status | orders__category | orders__total_amount | orders__amount_exclude_status_include_lookalike
---------------+------------------+----------------------+------------------------------------------------
cancelled      | books            | 100.00               | 100.00                                         
cancelled      | clothing         | 50.00                | 50.00                                          
cancelled      | electronics      | 50.00                | 50.00                                          
completed      | books            | 600.00               | 600.00                                         
completed      | clothing         | 300.00               | 300.00                                         
completed      | electronics      | 500.00               | 500.00
