rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filter_directive__grain_exclude_keeps_null_dimension_key.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/filter_directive.rs
assertion_line: 343
expression: result
---
orders__status | orders__category_nullable | orders__total_amount | orders__amount_grain_and_filter_exclude_status
---------------+---------------------------+----------------------+-----------------------------------------------
completed      | clothing                  | 300.00               | 720.00                                        
completed      | electronics               | 500.00               | 650.00                                        
completed      | NULL                      | 600.00               | 880.00
