rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filter_directive__group_by_outside_query_grain_keeps_query_row_set.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/filter_directive.rs
expression: result
---
orders__status | orders__amount_category_day_share_percent | orders__total_amount
---------------+-------------------------------------------+---------------------
completed      | 62.2222222222222222                       | 1400.00
