rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filter_directive__include_dim_filter.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/filter_directive.rs
expression: result
---
orders__category | orders__total_amount | orders__amount_only_completed
-----------------+----------------------+------------------------------
books            | 880.00               | 600.00                       
clothing         | 720.00               | 300.00                       
electronics      | 650.00               | 500.00
