rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filter_directive__include_or_group.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/filter_directive.rs
expression: result
---
orders__category | orders__total_amount | orders__amount_or_completed_pending
-----------------+----------------------+------------------------------------
books            | 880.00               | 780.00                             
clothing         | 720.00               | 670.00                             
electronics      | 650.00               | 600.00
