rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/snapshots/cubesqlplanner__tests__integration__multi_stage__filter_directive__include_time_dim_filter.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/multi_stage/filter_directive.rs
expression: result
---
orders__status | orders__total_amount | orders__amount_after_feb
---------------+----------------------+-------------------------
cancelled      | 200.00               | 150.00                  
completed      | 1400.00              | 1100.00                 
pending        | 650.00               | 500.00
